--- a/article.twig
+++ b/article.twig
@@ -305,9 +305,9 @@
                                                     {{article.blog.title}}
                                                 </div>
                                             </div>
-                                            <div class="c-article__title">
+                                            <h1 class="c-article__title">
                                                 {{ quotes.smarten(article.title) }}
-                                            </div>
+                                            </h1>
                                             <div class="c-article__additionalInfo">
                                                 <div class="c-article__posted-on">
                                                     <time class="c-article__published">{{article.publishedDate}}</time>
