--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -49,7 +49,7 @@
                     <div class="infoBox infoBox-xs">
                         <div class="infoBox__area js-profileViewOnly">
                             <div class="infoBox__head">
-                                <div class="infoBox__head-label">My account</div>
+                                <h1 class="infoBox__head-label">My account</h1>
                                 <a href="javascript:;" class="infoBox__head-link js-cus_acnt__showForm">Edit your details</a>
                             </div>
                             <div class="infoBox-dataGrid">
