--- a/event.twig
+++ b/event.twig
@@ -43,9 +43,9 @@
                                         </div>
                                     </a>
                                 {% endif %}
-                                <div class="c-eventdetail__title">
+                                <h1 class="c-eventdetail__title">
                                     {{ quotes.smarten(event.title) }}  
-                                </div>
+                                </h1>
                             </div>
                         </div>
                     </div>
