--- a/forgot-password.twig
+++ b/forgot-password.twig
@@ -7,7 +7,7 @@
     <div class="row u-flex-center">
         <div class="col-12">
             <div class="c-page-head c-page-head-xs vertical">
-                <div class="u-heading__large--d2 text-center">Forgot Password</div>
+                <h1 class="u-heading__large--d2 text-center">Forgot Password</h1>
                 <p class="sub-heading">Please enter your {{_Network.getNetworkTitle()}} username or Email address below to get a reset password link.</p>
             </div>
             <div class="row">
