--- a/layout-article-property.twig
+++ b/layout-article-property.twig
@@ -93,9 +93,9 @@
                                                     {{article.label}}
                                                 </div>
                                             {% endif %}
-                                            <div class="c-article__category">
+                                            <h1 class="c-article__category">
                                                 {{article.blog.title}}
-                                            </div>
+                                            </h1>
                                         </div>
                                         <div class="c-article__title">
                                             {{ quotes.smarten(article.title) }}
