--- a/layout-gallery.twig
+++ b/layout-gallery.twig
@@ -38,8 +38,7 @@
         <div class="row" id="loadmore_section">
             <div class="col-12">
                 <div class="c-page-head c-page-head-xs">
-                    <div class="u-heading__large u-heading__large-xs u-pr--6">{{blogData.title}}</div>
-                    
+                    <h1 class="u-heading__large u-heading__large-xs u-pr--6">{{blogData.title}}</h1>
                 </div>
             </div>
             
