--- a/search.twig
+++ b/search.twig
@@ -20,7 +20,7 @@
                     <div class="c-search__head">
                         {% set resultString = firstCount < 2 ? 'result' : 'results' %} 
                         <div class="c-search__head-text">Showing results for:</div>
-                        <div class="c-search__head-title">{{search | raw}}</div>
+                        <h1 class="c-search__head-title">{{search | raw}}</h1>
                     </div>
                 </div>
             </div>
