--- a/section-multi.twig
+++ b/section-multi.twig
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="c-page-head c-page-head-xs">
-                    <div class="u-heading__large u-heading__large-xs u-pr--6">{{_Blog.getBlogTitle()}}</div>
+                    <h1 class="u-heading__large u-heading__large-xs u-pr--6">{{_Blog.getBlogTitle()}}</h1>
                 </div>
             </div>
         </div>
