--- a/layout-article-image-top.twig
+++ b/layout-article-image-top.twig
@@ -154,9 +154,9 @@
                             <div class="c-article__category">
                                 {{article.label}}
                             </div>
-                            <div class="c-article__title">
+                            <h1 class="c-article__title">
                                 {{ quotes.smarten(article.title) }}
-                            </div>
+                            </h1>
                             <div class="c-article__posted-on">
                                 <time class="c-article__published">{{article.publishedDate}}</time>
                                 {% if updated %}
