--- a/section-multi2.twig
+++ b/section-multi2.twig
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="c-page-head c-page-head-xs">
-                    <div class="u-heading__large u-heading__large-xs u-pr--6">{{sectionTitle}}</div>
+                    <h1 class="u-heading__large u-heading__large-xs u-pr--6">{{sectionTitle}}</h1>
                 </div>
             </div>
         </div>
