--- a/section.twig
+++ b/section.twig
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="c-page-head c-page-head--withBorder c-page-head-xs">
-                    <div class="u-heading__large u-heading__large-xs u-pr--6">{{blogData.title}}</div>
+                    <h1 class="u-heading__large u-heading__large-xs u-pr--6">{{blogData.title}}</h1>
                 </div>
             </div>
         </div>
