--- a/layout-gallery.twig
+++ b/layout-gallery.twig
@@ -122,7 +122,7 @@
         {% endif %}
 
     </div>
-    <div class="j-keyword-cont" data-keywords="{{blogData.keywords}}" data-pageName="" data-pageType="blog" data-pageTags="" data-adsection=""></div>
+    <div class="j-keyword-cont" data-keywords="{{blogData.keywords}}" data-pageName="" data-pageType="blog" data-pageTag="" data-adsection=""></div>
 </main>
 
 
