--- a/article.twig
+++ b/article.twig
@@ -286,7 +286,10 @@
 {% endif %}
 
     <main id="main" class="o-body-container o-body-container-md u-margin-top-60 {% if showPaywall == true %} mb-0 {% endif %}" role="main" data-paywall-type="{{paywallType}}">
-        <div class="c-article c-article-xs c-article__carousel">
+        <div class="c-article c-article-xs c-article__carousel" itemprop="image" itemscope itemtype="http://schema.org/NewsArticle">
+            <meta itemscope itemprop="mainEntityOfPage"  itemType="https://schema.org/WebPage" itemid="{{article.url}}"/>
+            <meta itemprop="url" content="{{article.url}}">
+            <meta itemprop="dateModified" content="{{article.updatedAt}}">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -297,7 +300,7 @@
                                         <div class="c-article__top-container">
                                             <div class="c-article__category-wrap">
                                                 {% if article.label != article.blog.title %}
-                                                    <div class="c-article__additional-category">
+                                                    <div class="c-article__additional-category" >
                                                         {{article.label}}
                                                     </div>
                                                 {% endif %}
@@ -389,7 +392,10 @@
                 <div class="row c-article__main-container">
                     <div class="col-12 col-lg-1">
                         {% if config.hideShareIcons != 'true' %}
-                            <div class="u-generic-socialIcons u-generic-socialIcons--sticky u-generic-socialIcons-xs">
+                            <div class="u-generic-socialIcons u-generic-socialIcons--sticky u-generic-socialIcons-xs" itemprop="image" itemscope itemtype="http://schema.org/NewsArticle">
+                                <meta itemprop="url" content="http://www.w3.org/1999/xlink">
+                                <meta itemprop="height" content="32">
+                                <meta itemprop="width" content="32">
                                 <a class="u-generic-socialIcons__item"
                                     href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
                                     <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -527,6 +533,7 @@
 
 
                                     {% if article.media|length > 0 %}
+                                   
                                         {% set imageFeature = featured == 'image' ? true : false %}
                                         {{this.render('partials/gallery.twig', {
                                             media: article.media,
@@ -538,7 +545,7 @@
                                     {% endif %}
 
                                 </div>
-                                <div class="{% if showPaywall == true %} c-article__main__paywall-container {% endif %}"> 
+                                <div class="{% if showPaywall == true %} c-article__main__paywall-container {% endif %}" > 
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="c-article__main-content">
@@ -550,7 +557,10 @@
 
                                             {% if showPaywall == false %}
                                                 {% if config.hideShareIcons != 'true' %}
-                                                    <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end">
+                                                    <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end" itemprop="image" itemscope itemtype="http://schema.org/NewsArticle">
+                                                        <meta itemprop="url" content="http://www.w3.org/1999/xlink">
+                                                        <meta itemprop="height" content="21">
+                                                        <meta itemprop="width" content="20">
                                                         <div class="u-generic-socialIcons-text">Share article</div>
                                                         <a class="u-generic-socialIcons__item"
                                                             href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
@@ -656,7 +666,10 @@
 
                                                         {% set commentDate = _AppHelper.getDefaultTimezoneDateTime(comment.publishedDateTime,'j F Y') %}
 
-                                                        <div class="comments__outerComment">
+                                                        <div class="comments__outerComment" itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
+                                                            <meta itemprop="url" content="{{avatar}}">
+                                                            <meta itemprop="height" content="{{media.height}}">
+                                                            <meta itemprop="width" content="{{media.width}}">
                                                             <div class="comments__commentContainer">
                                                                 <div class="comments__Header">
                                                                     <div class="comments__author">
