--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -104,7 +104,7 @@
 
                         {% if adslots[0] is defined %}
                             <div class="col-12 col-xl-3">
-                                <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
+                                <div class="advertisment j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
                             </div>
                         {% endif %}
                     </div>
