--- a/partials/panels/section-08.twig
+++ b/partials/panels/section-08.twig
@@ -53,13 +53,53 @@
                 {% endfor %}
             </div>
         </div>
-    
+        <!-- Additional Cards -->
+        {% if articles|length > 8 %}
+            <div class="c-cards-container c-cards-container-xs bottom-border">
+                <div class="row">
+                    {% for i in 8..11 if articles[articleCount] %}
+
+                    <div class="col-12 col-lg-3 left-border">
+                        {{this.render('../_single-article.twig', {
+                        article: articles[articleCount],
+                        position: (articleCount+1),
+                        imageSize: {width: 79, height: 96},
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        timeSuppress: timeSuppress
+                        }) | raw}}
+                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+
+        {% if articles|length > 12 %}
+            <div class="c-cards-container c-cards-container-xs bottom-border">
+                <div class="row">
+                    {% for i in 12..15 if articles[articleCount] %}
+
+                    <div class="col-12 col-lg-3 left-border">
+                        {{this.render('../_single-article.twig', {
+                        article: articles[articleCount],
+                        position: (articleCount+1),
+                        imageSize: {width: 79, height: 96},
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        timeSuppress: timeSuppress
+                        }) | raw}}
+                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+
     </div>
 </div>
 {% if adslots[0] is defined %}
     <div class="row">
         <div class="col-12">
-            <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
+            <div class="advertisment j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
         </div>
     </div>
 {% endif %}
