--- a/partials/panels/section-02.twig
+++ b/partials/panels/section-02.twig
@@ -57,6 +57,10 @@
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                     {% endfor %}
+                    
+                    {% if articles|length == 4 and adslots[0] is defined %}
+                        <div class="advertisment j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
+                    {% endif %}
                 </div>
             </div>
         </div>
