--- a/layout-classifieds.twig
+++ b/layout-classifieds.twig
@@ -197,7 +197,7 @@
             {# *********************************************
                             Classifieds Side Menu
                 ********************************************* #}
-                <aside class="acme-col-12 acme-col-lg-3 acme-col-md-4 acme-col-sm-4">
+                <aside class="acme-col-12 acme-col-lg-3 acme-col-md-4 acme-col-sm-4 test-layout">
                     <div id="classified-menu" class="c-classified-menu c-classified-menu-xs">
                         {{ this.render('/partials/_menu-classifieds.twig', {
                             'menu': sideMenu,
