--- a/layout-business-classified.twig
+++ b/layout-business-classified.twig
@@ -71,7 +71,7 @@
     {% endif %}
 
     {% set cardClasses = 'acme-card-2-mobile acme-card-2-tablet acme-card-2-desktop' %}
-    {% set cardClassesLoading = 'acme-card-2-mobile acme-card-2-tablet acme-card-2-desktop acme-col-lg-6 acme-col-12 acme-col-md-12' %}
+    {% set cardClassesLoading = 'acme-card-2-mobile acme-card-2-tablet acme-card-2-desktop acme-col-lg-6 acme-col-12 acme-col-md-12 ff' %}
     {% set cardClassesContainer = 'acme-col-12 acme-col-md-12 acme-col-lg-6' %}
 
 
