--- a/layouts/partials/footer/footer_themecolour.twig
+++ b/layouts/partials/footer/footer_themecolour.twig
@@ -45,30 +45,32 @@
     {% endif %}
 {% endif %}
 
-<div class="c-footer__top">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                {% if paywall %}
-                {% if loggedin %}
-                <div class="c-navigation-4 c-navigation-4-xs">
-                    <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My
-                        account</a>
-                    <a href="{{_AppHelper.getLogoffUrl()}}"
-                        class="c-navigation__item c-navigation__item--borderred">Log out</a>
-                </div>
-                {% else %}
+{% if config['directory']['hideAuth'] is defined and config['directory']['hideAuth'] == false %}
+    <div class="c-footer__top">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    {% if paywall %}
+                    {% if loggedin %}
                     <div class="c-navigation-4 c-navigation-4-xs">
-                    <a href="javascript:;" id="signinBtn" class="c-navigation__item">Log in</a>
-                    <a href="{{networkData.defaultBlogUrl}}/subscriptions"
-                        class="c-navigation__item subscribe c-navigation__item--borderred">{{subscribeLabel}}</a>
+                        <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My
+                            account</a>
+                        <a href="{{_AppHelper.getLogoffUrl()}}"
+                            class="c-navigation__item c-navigation__item--borderred">Log out</a>
                     </div>
-                {% endif %}
-                {% endif %}
+                    {% else %}
+                        <div class="c-navigation-4 c-navigation-4-xs">
+                        <a href="javascript:;" id="signinBtn" class="c-navigation__item">Log in</a>
+                        <a href="{{networkData.defaultBlogUrl}}/subscriptions"
+                            class="c-navigation__item subscribe c-navigation__item--borderred">{{subscribeLabel}}</a>
+                        </div>
+                    {% endif %}
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
-</div>
+{% endif %}
 <footer class="c-footer c-footer-sm c-footer--themecolour">
     <div class="container">
         <div class="row c-footer__container">
