--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -61,21 +61,23 @@
                 <div class="col-12">
                     <div class="c-header-top-bar__container">
                         <aside class="c-header-top-bar__date">{{date}}</aside>
-                        {% if paywall %}
-                            {% if loggedin %}
-                                <div class="c-navigation-4 c-navigation-4-xs d-flex d-sm-none">
-                                    <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My
-                                        account</a>
-                                    <a href="{{_AppHelper.getLogoffUrl()}}"
-                                        class="c-navigation__item c-navigation__item--borderred">Log out</a>
-                                </div>
-                            {% else %}
-                                <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs  d-flex d-sm-none">
-                                    <a id="signinBtn" href="javascript:;" class="c-navigation__item">Log in</a>
-                                    <a href="{{networkData.defaultBlogUrl}}/subscriptions"
-                                        class="c-navigation__item c-navigation__item--borderred subscribe">{{subscribeLabel}} 
-                                    </a>
-                                </div>
+                        {% if config['directory']['hideAuth'] is not defined and config['directory']['hideAuth'] == false %}
+                            {% if paywall %}
+                                {% if loggedin %}
+                                    <div class="c-navigation-4 c-navigation-4-xs d-flex d-sm-none">
+                                        <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My
+                                            account</a>
+                                        <a href="{{_AppHelper.getLogoffUrl()}}"
+                                            class="c-navigation__item c-navigation__item--borderred">Log out</a>
+                                    </div>
+                                {% else %}
+                                    <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs  d-flex d-sm-none">
+                                        <a id="signinBtn" href="javascript:;" class="c-navigation__item">Log in</a>
+                                        <a href="{{networkData.defaultBlogUrl}}/subscriptions"
+                                            class="c-navigation__item c-navigation__item--borderred subscribe">{{subscribeLabel}} 
+                                        </a>
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endif %}
                         <aside class="c-navigation-0 c-navigation-0-xs">
@@ -112,6 +114,7 @@
 
                         
                         <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs d-none d-sm-flex">
+                        {% if config['directory']['hideAuth'] is not defined and config['directory']['hideAuth'] == false %}
                             {% if paywall %}
                                 {% if loggedin %}
                                     <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My account</a>
@@ -123,6 +126,7 @@
                                     </a>
                                 {% endif %}  
                             {% endif %}  
+                        {% endif %} 
                         </div>
                     </div>
                 </div>
