--- a/article.twig
+++ b/article.twig
@@ -586,7 +586,7 @@
                                             {% if showPaywall == false %}
                                                 {% if config.hideShareIcons != 'true' %}
                                                     <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end">
-                                                        <div class="u-generic-socialIcons-text">Share article</div>
+                                                        <div class="u-generic-socialIcons-text">Share</div>
                                                         <a class="u-generic-socialIcons__item"
                                                             href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
                                                             <svg width="20" height="21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
