--- a/layouts/partials/_javascript.twig
+++ b/layouts/partials/_javascript.twig
@@ -2,6 +2,10 @@
 {# <script type="text/javascript" src="{{networkData.templatePath}}/static/js/jquery3.6.js?ver=1"></script> #}
 <script defer type="text/javascript" src="{{networkData.templatePath}}/static/js/vendor.js?ver=87867"></script>
 
+{% if config.extended_access is defined and config.extended_access.active is defined and config.extended_access.active != false %}
+    <script src="https://accounts.google.com/gsi/client"></script>
+{% endif %}
+
 {% if _User.isAdminUser() %}
     {# used only for draging and dropping cards #}
     <script defer type="text/javascript" src="{{networkData.templatePath}}/static/js/vendor/jquery-ui-1.10.1.custom.min.js?ver=1"></script>
