--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -176,6 +176,8 @@
             @media #{$mobile} {
                 @include font-size(18);
                 line-height: 1.33;
+                min-height: auto !important;
+                height: inherit !important;
             }
         }
 
