image dimension fixes

--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -16,6 +16,9 @@
                             "mobile": {
                                 width: 550, height: 333
                             },
+                            "mobileLrg": {
+                                width: 550, height: 333
+                            },
                             "tablet": {
                                 width: 703, height: 425
                             }
@@ -41,6 +44,9 @@
                                 "mobile": {
                                     width: 550, height: 333
                                 },
+                                "mobileLrg": {
+                                    width: 550, height: 333
+                                },
                                 "tablet": {
                                     width: 703, height: 425
                                 }
@@ -62,6 +68,9 @@
                                 "mobile": {
                                     width: 635, height:450
                                 },
+                                "mobileLrg": {
+                                    width: 635, height:450
+                                },
                                 "tablet" : {
                                     width: 950, height:675
                                 }
@@ -81,6 +90,9 @@
                             imageSize: {width: 459, height: 278},
                             imageSizes: {
                                 "mobile": {
+                                    width: 550, height: 333
+                                },
+                                "mobileLrg": {
                                     width: 550, height: 333
                                 },
                                 "tablet": {
@@ -113,6 +125,9 @@
                             imageSize: {width: 459, height: 278},
                             imageSizes: {
                                 "mobile": {
+                                    width: 550, height: 333
+                                },
+                                "mobileLrg": {
                                     width: 550, height: 333
                                 },
                                 "tablet": {
