--- a/partials/panels/section-04.twig
+++ b/partials/panels/section-04.twig
@@ -41,7 +41,18 @@
                             {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
                             position: (articleCount+1),
-                            imageSize: {width: 79, height: 96},
+                            imageSize: {width: 120, height: 145},
+                            imageSizes: {
+                                "mobile": {
+                                    width: 120, height: 145
+                                },
+                                "mobileLrg": {
+                                    width: 120, height: 145
+                                },
+                                "tablet": {
+                                    width: 120, height: 145
+                                }
+                            },
                             swap : 'false',
                             containerClass: "card-1-mobile card-1-tablet card-1-desktop u-margin-bottom-20",
                             timeSuppress: timeSuppress
@@ -59,7 +70,18 @@
                             {{this.render('../_single-article.twig', {
                             article: articles[articleCount],
                             position: (articleCount+1),
-                            imageSize: {width: 79, height: 96},
+                            imageSize: {width: 120, height: 145},
+                            imageSizes: {
+                                "mobile": {
+                                    width: 120, height: 145
+                                },
+                                "mobileLrg": {
+                                    width: 120, height: 145
+                                },
+                                "tablet": {
+                                    width: 120, height: 145
+                                }
+                            },
                             swap : 'false',
                             containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                             timeSuppress: timeSuppress
