--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -51,10 +51,13 @@
                                     "mobile": {
                                         width: 550, height: 333
                                     },
+                                    "mobileLrg": {
+                                        width: 550, height: 333
+                                    },
                                     "tablet": {
                                         width: 703, height: 425
                                     }
-                                }, 
+                                },
                                 swap : 'false',
                                 containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
                                 card--verticalMulti card--verticalMulti-xs",
@@ -70,7 +73,18 @@
                         {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
-                        imageSize: {width: 79, height: 96},
+                        imageSize: {width: 120, height: 145},
+                        imageSizes: {
+                            "mobile": {
+                                width: 120, height: 145
+                            },
+                            "mobileLrg": {
+                                width: 120, height: 145
+                            },
+                            "tablet": {
+                                width: 120, height: 145
+                            }
+                        },
                         swap : 'false',
                         containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                         timeSuppress: timeSuppress
