--- a/partials/panels/section-01.twig
+++ b/partials/panels/section-01.twig
@@ -26,7 +26,18 @@
         {{this.render('../_single-article.twig', {
         article: articles[articleCount],
         position: (articleCount+1),
-        imageSize: {width: 306, height: 185},
+        imageSize: {width: 459, height: 278},
+        imageSizes: {
+            "mobile": {
+                width: 550, height: 333
+            },
+            "mobileLrg": {
+                width: 550, height: 333
+            },
+            "tablet": {
+                width: 703, height: 425
+            }
+        },
         swap : 'false',
         containerClass: inverseContainerClass,
         timeSuppress: timeSuppress
