--- a/partials/panels/section-02.twig
+++ b/partials/panels/section-02.twig
@@ -49,7 +49,18 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
-                    imageSize: {width: 306, height: 185},
+                    imageSize: {width: 459, height: 278},
+                    imageSizes: {
+                        "mobile": {
+                            width: 550, height: 333
+                        },
+                        "mobileLrg": {
+                            width: 550, height: 333
+                        },
+                        "tablet": {
+                            width: 703, height: 425
+                        }
+                    },
                     swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
                     card--verticalMulti card--verticalMulti-xs",
