--- a/partials/panels/section-08-ads.twig
+++ b/partials/panels/section-08-ads.twig
@@ -26,7 +26,18 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
-                    imageSize: {width: 306, height: 185},
+                    imageSize: {width: 459, height: 278},
+                    imageSizes: {
+                        "mobile": {
+                            width: 550, height: 333
+                        },
+                        "mobileLrg": {
+                            width: 550, height: 333
+                        },
+                        "tablet": {
+                            width: 703, height: 425
+                        }
+                    },
                     swap : 'false',
                     containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription",
                     timeSuppress: timeSuppress
@@ -50,7 +61,18 @@
                     {{this.render('../_single-article.twig', {
                     article: articles[articleCount],
                     position: (articleCount+1),
-                    imageSize: {width: 79, height: 96},
+                    imageSize: {width: 120, height: 145},
+                    imageSizes: {
+                        "mobile": {
+                            width: 120, height: 145
+                        },
+                        "mobileLrg": {
+                            width: 120, height: 145
+                        },
+                        "tablet": {
+                            width: 120, height: 145
+                        }
+                    },
                     containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                     timeSuppress: timeSuppress
                     }) | raw}}
@@ -69,7 +91,18 @@
                         {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
-                        imageSize: {width: 79, height: 96},
+                        imageSize: {width: 120, height: 145},
+                        imageSizes: {
+                            "mobile": {
+                                width: 120, height: 145
+                            },
+                            "mobileLrg": {
+                                width: 120, height: 145
+                            },
+                            "tablet": {
+                                width: 120, height: 145
+                            }
+                        },
                         containerClass: "card-1-mobile card-1-tablet card-1-desktop",
                         timeSuppress: timeSuppress
                         }) | raw}}
