--- a/partials/panels/section-14.twig
+++ b/partials/panels/section-14.twig
@@ -23,7 +23,18 @@
                     {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
-                        imageSize: {width: 79, height: 96},
+                        imageSize: {width: 120, height: 145},
+                        imageSizes: {
+                            "mobile": {
+                                width: 120, height: 145
+                            },
+                            "mobileLrg": {
+                                width: 120, height: 145
+                            },
+                            "tablet": {
+                                width: 120, height: 145
+                            }
+                        },
                         swap : 'false',
                         containerClass: "card-1-mobile card-1-tablet card-1-desktop card-1--with-description",
                         timeSuppress: timeSuppress
@@ -41,7 +52,18 @@
                     {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
                         position: (articleCount+1),
-                        imageSize: {width: 79, height: 96},
+                        imageSize: {width: 120, height: 145},
+                        imageSizes: {
+                            "mobile": {
+                                width: 120, height: 145
+                            },
+                            "mobileLrg": {
+                                width: 120, height: 145
+                            },
+                            "tablet": {
+                                width: 120, height: 145
+                            }
+                        },
                         containerClass: "card-1-mobile card-1-tablet card-1-desktop card-1--with-description",
                         timeSuppress: timeSuppress
                     }) | raw}}
